--- a/Readme
+++ b/Readme
@@ -1,91 +1,111 @@
-# How I Deciphered the Supposed Code of the Somerton Man
+🧩 How I Deciphered the Tamám Shud Code
 
-By ElOrrito
+By [ElOrrito]
+
 
 ---
 
-## 🧾 The Original Message (Found in the Book):
+🧾 The Original Message (Found in the Book):
 
-```
 WRGOABABD  
 WTBIMPANETP  
 MLIABOAIAQC  
 ITTMTSAMSTGAB
-```
 
 This mysterious code was written in capital letters on the back of a copy of The Rubaiyat of Omar Khayyam, found in a car linked to the unknown “Somerton Man.” For decades, the letters were believed to represent an unbreakable cipher — potentially even a Cold War-era code.
 
----
-
-## 🧠 My Breakthrough: It’s an Acrostic, Not a Cipher
-
-Instead of interpreting the message as an encrypted text (e.g. Vigenère, substitution, etc.), I treated it as an acrostic: where each letter is the first letter of a word, forming a meaningful message when reconstructed properly.
-
-This poetic technique is used in notes, music, mnemonics — and plausibly, in a farewell message.
 
 ---
 
-## 📜 My Deciphered Message
+🧠 My Breakthrough: It’s an Acronym, Not a Cipher
 
-> “We remember grieving over a broken and beautiful day.  
-Wrote this because I'm missing peace and nothing else to protect.  
-My love is a beautiful one and I am always quietly crying.  
+Instead of interpreting the message as an encrypted text (e.g. Vigenère, substitution, etc.), I treated it as an acronym-based message: where each letter represents the first letter of a word, forming a meaningful and coherent statement when reconstructed.
+
+This technique is common in mnemonics, poetry, and shorthand — and in this context, could serve as a hidden farewell.
+
+
+---
+
+📜 My Deciphered Message:
+
+> “We remember grieving over a broken and beautiful day.
+Wrote this because I'm missing peace and nothing else to protect.
+My love is a beautiful one and I am always quietly crying.
 If this truly means the sadness and memory shall truly go away, beloved.”
 
+
+
+
 ---
 
-## 🔍 Step-by-Step Logic
+🔍 Step-by-Step Logic
 
-### 1. Context Matters
+1. Context Matters
+The body was found in 1948 on an Australian beach, well-dressed, anonymous, and carrying a small scrap of paper reading "Tamám Shud" — meaning “It is ended.” All signs pointed to a voluntary act, possibly a suicide. The tone of the cipher suggested something deeply personal.
 
-The body was found in 1948 on an Australian beach, well-dressed, anonymous, and carrying a small scrap of paper reading "Tamám Shud" — meaning “It is ended.” All signs pointed to a voluntary act, likely a suicide, and the tone surrounding the code seemed deeply personal.
 
-### 2. Thematic Word Selection
+2. Thematic Word Selection
+I approached each line by generating likely English words beginning with the letters, based on themes of:
 
-Based on the emotional context (loss, love, finality), I created a list of likely English words that begin with each letter from the code — especially focusing on:
 
-- Love and memory (e.g., Remember, Love, Beloved)
-- Sadness and inner turmoil (e.g., Broken, Crying, Grieving)
-- Peaceful resolution (e.g., Peace, Away, Quietly)
 
-### 3. Line-by-Line Decryption
+Grief and love (e.g., Remember, Beloved)
 
-**Line 1: WRGOABABD**  
+Resignation and loss (e.g., Broken, Crying, Peace)
+
+Emotional farewell (e.g., Always, Quietly, Away)
+
+
+3. Line-by-Line Interpretation
+
+
+
+Line 1: WRGOABABD
+
 > We Remember Grieving Over A Broken And Beautiful Day
+— Clear tone of sorrow and reflection.
 
-- All words fit naturally and emotionally.
-- No forced syntax or obscure vocabulary.
-- Consistent with a grieving, poetic tone.
 
-**Line 2: WTBIMPANETP**  
+
+Line 2: WTBIMPANETP
+
 > Wrote This Because I'm Missing Peace And Nothing Else To Protect
+— Suggests the writer has lost purpose and is making peace.
 
-- "Nothing else to protect" implies resignation or loss of purpose.
-- Suggests emotional pain and a goodbye.
 
-**Line 3: MLIABOAIAQC**  
+
+Line 3: MLIABOAIAQC
+
 > My Love Is A Beautiful One And I Am Always Quietly Crying
+— Emotional depth, shows personal tragedy.
 
-- Deeply personal.
-- "Quietly crying" gives emotional resonance, matching themes of grief.
 
-**Line 4: ITTMTSAMSTGAB**  
+
+Line 4: ITTMTSAMSTGAB
+
 > If This Truly Means The Sadness And Memory Shall Truly Go Away, Beloved
+— Reads like the final farewell to a loved one.
 
-- Feels like a final line in a poem or suicide note.
-- Addresses a “beloved,” possibly a lost partner.
 
----
 
-## ✅ Why This Interpretation Makes Sense
 
-- Emotionally consistent: It reads like an authentic expression of personal pain.
-- Poetically structured: The rhythm and tone feel deliberate, not random.
-- Fits the physical evidence: The Tamám Shud note, the lack of ID, and the method of death all align with an intentional, symbolic farewell.
-- Alternative theories are weaker: No cipher has matched this text in 75+ years using traditional cryptography.
 
 ---
 
-## 🏁 Conclusion
+✅ Why This Interpretation Makes Sense
 
-I believe this interpretation of the Tamám Shud code provides the most plausible reading to date. It’s a poetic, emotionally charged farewell from a man who may have lost his love and saw no reason to continue. Whether a personal tragedy or something darker occurred, this message seems to be his final attempt to say goodbye — hidden in plain sight.
+Emotionally consistent: The tone fits a deeply personal, poetic farewell.
+
+Poetically structured: It reads with flow and intent — not randomness.
+
+Backed by physical clues: The "Tamám Shud" scrap, the suit, the lack of ID — all support the narrative of a purposeful departure.
+
+Unmatched by ciphers: Decades of cryptographic attempts have failed to produce meaningful results; this method offers the first coherent emotional message.
+
+
+
+---
+
+🏁 Conclusion
+
+This interpretation offers a compelling and plausible solution to the Tamám Shud mystery. Rather than an unbreakable spy code, the letters may simply be a hidden acronym-based farewell — a last message from a man broken by loss, whose pain we’re only now beginning to understand
